--- a/src/main/public/index.html
+++ b/src/main/public/index.html
@@ -13,6 +13,7 @@
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/prism.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-java.min.js" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-scala.min.js" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-python.min.js" type="text/javascript"></script>
   <script src="./dist/bundle.js"></script>
 </body>
 </html>
